--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "react-transition-group": "^4.4.1",
     "rehowl": "^0.6.0",
     "styled-components": "^5.1.0",
