--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pomodoify",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://hrbengtsen.github.io/pomodoify",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.0.0",
     "howler": "^2.2.0",
     "react": "^16.13.1",
     "react-circular-progressbar": "^2.0.3",
@@ -23,6 +25,8 @@
     "styled-system": "^5.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
